z-index fix

--- a/style/main.css
+++ b/style/main.css
@@ -605,7 +605,7 @@ input[type=submit] {
     height: 100%;
     width: 0;
     position: fixed;
-    z-index: 3;
+    z-index: 4;
     top: 0;
     left: 0;
     background-color: #222;
